stage0/tests/compile_fail/types/type_arity.dg
func g(a: i32) -> i32 { a }
func main() -> i32 { g(1, 2) }
